main.css
h3 {
  font-size: 20pt;
  padding: 20px;
}

#login-page {
  width: 100%;
  text-align: center;
}

html, body {
  overflow: hidden;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

#renderCanvas {
  width: 100%;
  height: 100%;
  touch-action: none;
  position: absolute;
  z-index: -1;
}

.model-avatar {
  display: none;
  height: 32px;
  width: 32px;
  display: none;
  background-size: 32px 32px;
  border-radius: 32px;
  border: 2px white solid;
  margin-right: 10px;
  background-image: url('./silhouette.jpg');
}

.model-username {
  display: none;
  line-height: 38px;
  vertical-align: top;
  width: calc(100% - 46px);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-align: left;
}

.firebase-item {
  display: inline-block;
  border: solid 1px rgb(50,50,50);
  margin: 2px;
  border-radius: 10px;
  padding: 5px;
  text-align: center;
}

.items-panel {
  padding:4px;
  font-size:10pt;
  overflow-x:auto;
  overflow-y:hidden;
  z-index: 1;
  background: rgba(255,255,255,.5);
  pointer-events: auto;
}
#main-title-bar {
  text-align:right;
  padding: 2px;
  background: rgba(255,255,255,.5);
}
#main-page {
  position: absolute;
  width: 100%;
  height: 100%
}

#model-upload-panel {
  position: absolute;
  width: 200px;
  right: 10px;
  top: 50px;
}

#meshDetailCanvas {
  touch-action: none;
  z-index: -1;
}

.split, .split-flex {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  overflow-y: auto;
  overflow-x: hidden;
}

.gutter {
  background-color: #eee;
  background-repeat: no-repeat;
  background-position: 50%;
}
.gutter.gutter-horizontal {
  background-image: url('assets/vertical.png');
  cursor: ew-resize;
}
.gutter.gutter-vertical {
  background-image: url('assets/horizontal.png');
  cursor: ns-resize;
}
.split.split-horizontal, .gutter.gutter-horizontal {
  height: 100%;
  float: left;
}
.flex-vertical, .flex-horizontal  {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: stretch;
  align-content: stretch;
}
.flex-horizontal {
  flex-direction: row;
}
#sign-out-button {
  font-size:10px;
}

